# Stellaria-Motion

./: .gitignore  CMakeLists.txt  NOTICE  README.md
Sources/App/: Info.plist  StellariaMotionApp.swift  main.mm
Sources/App/Resources/: StellariaMotion.icns
Sources/BrowserAgent/: native_host_manifest.json
Sources/BrowserAgent/extension/: content_script.js  manifest.json  service_worker.js
Sources/BrowserAgent/native_host/: NativeHost.cpp
Sources/BrowserAgent/stream_bridge/: BrowserStreamBridge.h  BrowserStreamBridge.mm
Sources/Core/: BrowserProtocol.cpp  BrowserProtocol.h  MotionProfiler.cpp  MotionProfiler.h  MotionQuality.cpp  MotionQuality.h  MotionTypes.h  RealtimeVFISession.cpp  RealtimeVFISession.h  RenderGraph.cpp  RenderGraph.h
Sources/Metal/: MotionKernels.metal  MotionMetalRuntime.h  MotionMetalRuntime.mm
Sources/VFI/: MotionVFIPipeline.cpp  MotionVFIPipeline.h  RIFECoreMLRunner.h  RIFECoreMLRunner.mm  RIFEMPSGraphRunner.h  RIFEMPSGraphRunner.mm  RIFEMetal4BitRunner.h  RIFEMetal4BitRunner.mm  RIFEModelBackend.cpp  RIFEModelBackend.h  RIFESP4Runner.h  RIFESP4Runner.mm
Sources/Video/: MotionOfflineProcessor.h  MotionOfflineProcessor.mm  MotionOnlineProcessor.h  MotionOnlineProcessor.mm  MotionVideoSource.h  MotionVideoSource.mm
Tests/: LocalPlayerVideoOutputSmoke.mm  MotionCoreTests.cpp  MotionOfflineProcessorSmoke.mm  RIFEMPSGraphPerfSmoke.mm  RIFEMPSGraphSmoke.mm  RIFEMetal4BitPerfSmoke.mm  RIFEMetal4BitSmoke.mm  RIFESP4Smoke.mm  RealtimeVFIPacingSmoke.cpp  RealtimeVFITestCLI.mm
Tests/browser_fixture/: test_video.html
docs/: Stellaria Motion 技术报告.md  architecture.md
tools/: benchmark_realtime_tiers.py  bilibili_cache_client.py  build_app.sh  convert_rife_conv_trunk_coreml.py  convert_rife_metal4.py  download_models.sh  install_chrome_native_host.sh  online_video_test.html  package_dmg.sh  package_release.sh  probe_real_video_page.js  serve_online_video_test.py  simulate_browser_vfi_chain.py
